clusters/homelab/apps/media/overseerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: overseerr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: overseerr
  template:
    metadata:
      labels:
        app: overseerr
    spec:
      securityContext:
        fsGroup: 1000
      containers:
        - name: overseerr
          image: lscr.io/linuxserver/overseerr:1.26.1 # {"$imagepolicy": "flux-system:overseerr"}
          ports:
            - containerPort: 5055
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: overseerr-config
