clusters/homelab/apps/media/overseerr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: overseerr
  namespace: media
  labels:
    traefik.tafu.casa/instance: internal
spec:
  ingressClassName: traefik-internal
  tls:
    - hosts:
        - overseerr.cl.tafu.casa
      secretName: wildcard-cl-tafu-casa-tls
  rules:
    - host: overseerr.cl.tafu.casa
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: overseerr
                port:
                  number: 5055
